# chessdashboard

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.airflow  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.claude/commands/: guide.md  test.md
.claude/skills/generating-commit-messages/: SKILL.md
.github/workflows/: ci.yml  daily_pipeline.yml
chessdashboard_dbt/: dbt_project.yml  profiles.yml
chessdashboard_dbt/models/marts/: monthly_win_rate.sql  opening_stats.sql  player_stats.sql  schema.yml  time_control_breakdown.sql
chessdashboard_dbt/models/staging/: schema.yml  sources.yml  stg_games.sql
dags/: chess_pipeline_dag.py
dashboard/: app.py
dashboard/pages/: 1_Documentation.py
ingestion/: config.py  pipeline.py
ingestion/normalizers/: common.py
ingestion/sources/: chesscom.py  lichess.py
src/chessdashboard/: __init__.py  chesscom_client.py  cli.py  dashboard.py  database.py  lichess_client.py  schema.py
tests/: conftest.py  test_chesscom.py  test_chesscom_client.py  test_cli.py  test_database.py  test_lichess.py  test_lichess_client.py  test_normalizers.py  test_pipeline.py
transform/: dbt_project.yml  profiles.yml
transform/models/marts/: _marts_models.yml  daily_results.sql  fct_games.sql  monthly_win_rate.sql  opening_stats.sql  player_stats.sql
transform/models/staging/: _stg_models.yml  _stg_sources.yml  (+2 more)
transform/seeds/: eco_codes.csv
transform/tests/: assert_aggregation_sums_match.sql  assert_fct_row_count_matches_stats.sql  assert_monthly_totals_consistent.sql  assert_win_pct_bounds.sql
