[project]
name = "chessdashboard"
version = "0.1.0"
description = "CLI tool to fetch chess games from Lichess and Chess.com, store in DuckDB, and analyze with dbt"
readme = "README.md"
authors = [
    { name = "Roberto Rousse", email = "roberto.rousse@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chess>=1.10.0",
    "duckdb>=0.9.0",
    "click>=8.0.0",
    "dbt-duckdb>=1.7.0",
    "httpx>=0.27.0",
]

[project.scripts]
chessdashboard = "chessdashboard.cli:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
