[project]
name = "chessdashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlt[duckdb,motherduck,parquet]>=1.0",
    "duckdb==1.4.4",
    "python-chess>=1.10",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]
