[project]
name = "chessdashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-duckdb>=1.9",
    "dlt[duckdb,motherduck,parquet]>=1.0",
    "duckdb==1.4.4",
    "python-chess>=1.10",
    "python-dotenv>=1.0",
    "streamlit>=1.40",
]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.8"]
